# 0000_auxilium

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
examples/: main.c
include/: allocator.h  auxilium.h  dynamic_array.h  log.h  platform_detection.h  utils.h
src/: allocator.c  dynamic_array.c  main.c
src/allocators/: allocator_basic.c
tests/: test_utils.c
